# PostFX

./: .gitignore  CMakeLists.txt
ext/: implementations.cpp
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
resources/shaders/: cel.frag  cel.vert  normals.frag  normals.geom  normals.vert  outline.frag  outline.vert  simple.frag  simple.vert  texture.frag
src/: main.cpp
src/Application/: Application.cpp  Application.h  ResourceManager.cpp  ResourceManager.h  Time.h  WindowManager.cpp  WindowManager.h
src/Renderer/: ForwardRenderPass.cpp  ForwardRenderPass.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  UniformBuffer.cpp  UniformBuffer.h
src/Scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
